--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:8889/stl-playgrounds
-spring.datasource.username=stl-playgrounds
-spring.datasource.password=letsplay
+spring.datasource.username=stl
+spring.datasource.password=stl
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
