--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Nov 06 15:58:51 GMT 2018
+#Sat Aug 17 14:31:04 CDT 2019
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.5.1-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.5.1-bin.zip
+zipStoreBase=GRADLE_USER_HOME
