--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:8889/stl-playgrounds
-spring.datasource.username=stl
-spring.datasource.password=stl
+spring.datasource.username=stl-playgrounds
+spring.datasource.password=letsplay
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -15,3 +15,5 @@ spring.jpa.hibernate.ddl-auto = update
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.datasource.initialization-mode=always
