Add comment plugin to playgrond page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:8889/stl-playgrounds
-spring.datasource.username=stl-playgrounds
+spring.datasource.username=stl-playground
 spring.datasource.password=letsplay
 
 # Specify the DBMS
