--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:8889/stl-playgrounds
+spring.datasource.url=jdbc:mysql://localhost:8889/stl-playgrounds?useSSL=false
 spring.datasource.username=stl-playgrounds
 spring.datasource.password=letsplay
 
